# dory

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPATIBILITY.md  COMPETITOR_ISSUE_COVERAGE.md  CONTRIBUTING.md  MACHINE_IMAGE_CONTRACT.md  README.md  RELEASE_FEATURE_AUDIT.md  RELEASE_READINESS.md
.github/: actionlint.yaml
Casks/: dory.rb
Config/: Dory-Info.plist  dev.dory.network-helper.plist
Dory/: ContentView.swift  Dory.entitlements  DoryApp.swift
Dory.xcodeproj/: project.pbxproj
DoryTests/: AgentModeTests.swift  AppStoreEnvAllowListTests.swift  AppStoreKubernetesVersionTests.swift  AppleLogParseTests.swift  AppleStatsMathTests.swift  ComposeEngineTests.swift  ComposeMergeTagTests.swift  ComposeTests.swift  ComposeVolumeWiringTests.swift  ContainerActionsTests.swift  ContainerListStateTests.swift  ContainerStatsFormatTests.swift  DockerDiskUsageParserTests.swift  DockerEngineIntegrationTests.swift  DockerEngineRuntimePerformanceTests.swift  DockerEngineSocketDiscoveryTests.swift  DomainRouterTests.swift  DoryOpenShimTests.swift  DoryProcessMemoryTests.swift  DoryTests.swift  DorydClientTests.swift  DorydLaunchAgentTests.swift  EngineServicesTests.swift  EventSynthesizerTests.swift  ExecArgsTests.swift  HTTPCodecTests.swift  HealthSupportBundleTests.swift  HostBridgeForwardTests.swift  HostBridgeTests.swift  HostToolScanTests.swift  ImageSearchTests.swift  KubeClientArgsTests.swift  KubeContextHintTests.swift  KubeExecCommandTests.swift  KubeLogParserTests.swift  KubeResourceKindTests.swift  (+54 more)
dory-core/: .gitignore  Cargo.toml  README.md
dory-core/agent/: Cargo.toml
dory-core/agent/src/: daemon.rs  dispatch.rs  lib.rs  main.rs  sync_apply.rs  telemetry.rs  vsock_server.rs
dory-core/dataplane/: Cargo.toml
dory-core/dataplane/examples/: forward_serve.rs
dory-core/dataplane/src/: classify.rs  create_rewrite.rs  http_head.rs  lib.rs  serve.rs
dory-core/ffi/: Cargo.toml
dory-core/ffi/src/: lib.rs  remote.rs
dory-core/pb/: Cargo.toml  build.rs
dory-core/pb/proto/: agent.proto  control.proto
dory-core/pb/src/: lib.rs
dory-core/proto/: Cargo.toml
dory-core/proto/src/: channels.rs  frame.rs  half_close.rs  handshake.rs  lib.rs  mux.rs  preamble.rs
dory-core/remote/: Cargo.toml
dory-core/remote/src/: agent_client.rs  error.rs  lib.rs  ssh.rs  sync_push.rs
dory-core/remote/tests/: real_agent_over_tcp.rs
(+403 files in other folders)
