[workspace]
resolver = "2"
members = ["proto", "pb", "agent", "dataplane", "ffi", "remote"]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
prost = "0.13"
prost-build = "0.13"
serde_json = "1"
uniffi = "0.28"

[profile.release]
lto = true
panic = "abort"
strip = true
