[package]
name = "dory-remote"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dory-proto = { path = "../proto" }
dory-pb = { path = "../pb" }
tokio = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
russh = "0.54"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
